# libgumath

./: .appveyor.yml  .appveyor_conda.yml  .gitignore  .gitmodules  .travis.yml  INSTALL.txt  LICENSE  Makefile.in  README.md  README.rst  config.h.in  configure  configure.ac  install-python.sh  setup.py  test_hyphothesis.py
.conda/gumath/: bld.bat  meta.yaml
.conda/libgumath/: bld.bat  build.sh  meta.yaml
c/: Makefile  examplesmodule.c  gufuncs.c  gufuncs.h  infrastructure.c  infrastructure.h  test_examples.py
doc/: conf.py  index.rst
doc/_static/: copybutton.js
doc/experimental/: dispatch.rst
doc/gumath/: functions.rst  index.rst
doc/gumath/trigonometry/: index.rst
doc/libgumath/: data-structures.rst  functions.rst  gufunc.rst  index.rst  kernel.rst  kernels.rst  numba_integration.rst
doc/releases/: index.rst
libgumath/: Makefile.in  Makefile.vc  apply.c  func.c  gumath.h  gumath.h.in  kernels.c  map.c  map.h  nploops.c  tbl.c  thread.c  xndloops.c
libgumath/extending/: bfloat16.c  examples.c  graph.c  pdist.c  quaternion.c  xfloat16.c
libgumath/kernels/: binary.c  binary_common.c  binary_common.h  bitwise.c  common.c  common.h  cpu_device_binary.cc  cpu_device_binary.h  cpu_device_msvc.cc  cpu_device_unary.cc  cpu_device_unary.h  cpu_host_binary.c  cpu_host_unary.c  cuda_binary_device.cu  cuda_binary_device.h  cuda_binary_host.c  cuda_device_binary.cu  cuda_device_binary.h  cuda_device_unary.cu  cuda_device_unary.h  cuda_host_binary.c  cuda_host_unary.c  cuda_unary.c  cuda_unary_device.cu  cuda_unary_device.h  cuda_unary_host.c  device.hh  unary.c
libgumath/kernels/contrib/: bfloat16.h
python/: dispatch.py  extending.py  gufunc1.py  gumath_aux.py  randdec.py  randfloat.py  signature.py  test_gumath.py  test_xndarray.py
python/gumath/: __init__.py  _gumath.c  cuda.c  examples.c  functions.c  numba.py  pygumath.h
ruby/: CONTRIBUTING.md  Gemfile  README.md  Rakefile  gumath.gemspec
ruby/ext/ruby_gumath/: examples.c  extconf.rb  functions.c  gufunc_object.c  gufunc_object.h  ruby_gumath.c  ruby_gumath.h  ruby_gumath_internal.h  util.c  util.h
ruby/lib/: gumath.rb
ruby/lib/gumath/: version.rb
ruby/test/: leakcheck.rb  test_gumath.rb  test_helper.rb
tools/: detect_cuda_arch.cc
vcbuild/: INSTALL.txt  runtest32.bat  runtest64.bat  vcbuild32.bat  vcbuild64.bat  vcclean.bat  vcdistclean.bat
